UPDATE: css fix for scrollbars

--- a/trunk/CO_FILES/css/apps/contacts.css
+++ b/trunk/CO_FILES/css/apps/contacts.css
@@ -8,8 +8,8 @@
 
 #contacts1, #contacts2, #contacts3 { padding:0; overflow: hidden !important; /* prevent scrollbars auto-added by Layout */}
 #contacts1 { display: block;}
-#contacts1 .scrolling-content { width: 325px !important;}
-.contacts1-content { width: 325px;; background-color: #c88700; padding:0; overflow:hidden !important;}
+#contacts1 .scrolling-content { width: 100% !important;}
+.contacts1-content { width: 100%; background-color: #c88700; padding:0; overflow:hidden !important;}
 
 #contacts .ui-layout-west li>span:hover   { background-color: #E9D09A}
 #contacts .ui-layout-west li>span.active-link  { background-color: #E9D09A}
